# litcrypt.rs

./: Cargo.toml  README.md  TODO.md
src/: litcrypt.rs  xor.rs
