[package]
name = "litcrypt3"
authors = ['Robin Syihab (r@ansvia.com)', 'Kurosh Dabbagh Escalante (@_Kudaes_)','ehuff700','zaxebo1']
version = "0.4.1"
description = "Let's encrypt your string statically during compile time"
license = "Apache-2.0"
repository = "https://github.com/zaxebo1/litcrypt.rs"
readme = "README.md"
keywords = ["litcrypt", "encrypt", "obfuscation"]

[lib]
proc-macro = true
path = "src/litcrypt.rs"

[dev-dependencies]
expectest = { version = "0.12.0", features = [] }

[dependencies]
quote = "1.0.8"
proc-macro2 = "1.0.24"
rand = "0.8.5"
lazy_static = "^1.4.0"
syn = { version = "2.0.39", features = [] }
